# star

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  build.py
cmake/: imgui.cmake  sandbox.cmake  test.cmake
doc/cn/: basic_type.md
import/: star.cppm
include/star/: concept.hpp  def.hpp  star.hpp
include/star/core/: application.hpp  game.hpp  time_step.hpp  window.hpp
include/star/core/ecs/: scene.hpp
include/star/core/error/: error.hpp
include/star/core/event/: ecs_event.hpp  event.hpp  event_dispatcher.hpp  input_event.hpp
include/star/core/io/: input.hpp  log.hpp
include/star/core/math/: linear.hpp
include/star/core/os/: key.hpp
include/star/driver/opengl/: framebuffer.hpp  gl_common.hpp  index_buffer.hpp  opengl_context.hpp  vertex_array.hpp  vertex_buffer.hpp  vertex_layout.hpp
include/star/ecs/component/: camera.hpp  camera2d.hpp  component.hpp  orthographic_camera.hpp  sprite.hpp  transform2d.hpp  transform3d.hpp
include/star/ecs/system/: sprite_system.hpp
include/star/function/filesystem/: path.hpp
include/star/function/render/: color.hpp  gl_texture2d.hpp  material2d.hpp  renderable.hpp  renderer2d.hpp  shader.hpp
include/star/platform/: os.hpp
include/star/platform/windows/: windows_window.hpp
include/star/resource/: collector.hpp  loader.hpp  ref.hpp  resource.hpp  resource_info.hpp  resource_manager.hpp  texture2d.hpp
include/star/rtl/: atomic_array.hpp  atomic_queue.hpp  hash_map.hpp  hash_set.hpp  list.hpp  map.hpp  ref.hpp  safe_queue.hpp  set.hpp  string.hpp  string_view.hpp  unique_ptr.hpp  weak_ptr.hpp
include/star/tool/: application.hpp  class_db.hpp  class_db_macro.hpp  default_bind.hpp
include/star/tool/imgui/: imgui.hpp
resource/shader/: fragment.frag  vertex.vert
sandbox/: sandbox_app.cpp
shader/: fragment.frag  vertex.vert
src/core/: application.cpp  game.cpp  time_step.cpp  window.cpp
src/core/ecs/: entity.cpp  scene.cpp
src/core/error/: error.cpp
src/core/event/: ecs_event.cpp  event.cpp  event_dispatcher.cpp  input_event.cpp
src/core/io/: input.cpp  log.cpp
src/driver/: framebuffer.cpp  index_buffer.cpp  opengl_context.cpp  vertex_array.cpp  vertex_buffer.cpp  vertex_layout.cpp
src/ecs/component/: camera2d.cpp  component.cpp  orthographic_camera.cpp  sprite.cpp  transform2d.cpp  transform3d.cpp
src/ecs/system/: sprite_system.cpp
src/function/filesystem/: path.cpp
src/function/render/: color.cpp  gl_texture2d.cpp  material2d.cpp  renderer2d.cpp  shader.cpp
src/platform/linux/: os.cpp
src/platform/macos/: os.cpp
src/platform/windows/: os.cpp  windows_window.cpp
src/resource/: collector.cpp  loader.cpp  resource.cpp  resource_info.cpp  resource_manager.cpp  texture2d.cpp
src/test/: event_dispatcher_test.cpp
src/tool/: class_db.cpp  default_bind.cpp
src/tool/imgui/: imgui.cpp
star_editor/: main.cpp
star_editor/data/: component_data.cpp  component_data.hpp  entity_data.cpp  entity_data.hpp  scene_data.cpp  scene_data.hpp
star_editor/dockspaces/: game.cpp  game.hpp  scene_view.hpp
star_editor/elements/: detail.cpp  detail.hpp  hierarchy.cpp  hierarchy.hpp  menubar.cpp  menubar.hpp  scene_view.cpp
test/: class_db_test.cpp  event_dispatcher_test.cpp  event_dispatcher_test_data  glm_test.cpp  opengl_test.cpp  resource_test.cpp
